Thu Dec 10 22:02:49 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* Released GTK+ 1.1.7

	* INSTALL:
	  NEWS:
	  README:
	  configure.in:
	  gtk+.spec:
	  gtk/gtkfeatures.h.in: 
	  docs/gtk-config.1: Version to 1.1.7

Thu Dec 10 20:48:19 PST 1998 Manish Singh <yosh@gimp.org>

	* gtk/gtkclist.c: avoid void pointer math

	* gtk/gtkhscale.c
	* gtk/gtkhscrollbar.c
	* gtk/gtkvscale.c
	* gtk/gtkvscrollbar.c: removed trailing , from enums

	* gtk/gtksignal.c: can't use enums as a bitfield type, use guint

	* gtk/testgtk.c: removed C++ comment added by owenpoo

Thu Dec 10 21:48:34 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.[ch]: Added gtk_drag_source_unset()

Thu Dec 10 20:42:22 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_dest_handle_event): Use 
	gdk_window_get_origin() instead of gdk_window_get_position,
	because get_position is unreliable for plugs. 

	This is a bad hack, maybe we need GDK_WINDOW_PLUG?

Thu Dec 10 17:58:49 GMT 1998  Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - re-write the GtkProgressBar section to the 1.1 API.
	  - add an Appendix listing all the signals
	    (apologies to TimJ for taking so long in using his hard work
	     in automating the extraction - thanx Tim). 
	* examples/*: bring them all upto the tutorial versions

Thu Dec 10 02:21:16 1998  Jeff Garzik  <jgarzik@pobox.com>

	* gtk/testdnd.c: use g_snprintf, eliminate need for string.h
	* gtk/testrgb.c: include string.h, for strlen

Wed Dec  9 17:39:26 1998  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Add a case for success in 
	test for XUnregisterIMInstantiate, to prevent
	screwing up $LIBS.

Wed Dec  9 13:06:31 1998  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>
 
 	* gdk/gdkim.c (gdk_ic_new,gdk_ic_{set,get}_attr): Fixed argument
 	list and return type for non-XIM fallback.
 
 	* configure.in: Only build XIM-support if available.
 
Wed Dec  9 12:23:30 1998  Owen Taylor  <otaylor@redhat.com>
	